--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -17,7 +17,9 @@
           <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
 
         <% end %>
+        
       </div>
     </div>
+    <%= link_to "投稿内容一覧へ", topics_path %>
   </div>
 </div>
