--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to favorites_index_path do %>
                 <%= image_tag "icons/heart.png" %>
               <% end %>
             </li>
@@ -58,5 +58,7 @@
         $(".alert").fadeOut(5000);
      });
     </script>
+    <%= debug(params) if Rails.env.development? %> 
+    <%= debug @comments if Rails.env.development? %>
   </body>
 </html>
