--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,11 +8,35 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+            
+             <% if !topic.favorite_users.include?(current_user) %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+              <% end %>
+            <%= else %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %> 
+            <% end %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
+            <h2>コメント一覧</h2>
+            <% topic.comments.each do |comment| %>
+              <div>
+                <%= comment.content %>
+                <hr>
+              </div>
+            <% end %>
+            <%= form_for :comment, url: comments_path do |f| %>
+              <%= f.hidden_field :user_id, value: @comment.user_id %>
+              <%= f.hidden_field :topic_id, value: topic.id %>
+              <div class="form-group">
+                <%= f.label :comment %>
+                <%= f.text_area :content, class: 'form-control' %>
+              </div>
+              <%= f.submit 'コメントする', class: 'btn btn-black btn-block' %>
+            <% end %>
           </div>
         </div>
       </div>
