--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,14 +9,16 @@
             </h2>
             <%= image_tag topic.image.url %>
             
-             <% if !topic.favorite_users.include?(current_user) %>
+            <% if !topic.favorite_users.include?(current_user) %>
               <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
                 <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
               <% end %>
-            <%= else %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %> 
+            <% else %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                <%= image_tag 'icons/heart-red.png', class: 'topic-index-icon' %> 
+              <% end %>
             <% end %>
+            <%= topic.favorite_users.count %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
